--- a/src/app/webfront/templates/base.html
+++ b/src/app/webfront/templates/base.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
+{% load staticfiles %}<!DOCTYPE html>
 <html ng-app="App">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.css">
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
     <title>{{ title|default:"KiTimer" }}</title>
 </head>
-<body ng-controller="AppController">
-    <md-toolbar layout="row"></md-toolbar>
+<body ng-controller="BaseController">
+    <md-toolbar layout="row">
+        <div class="md-toolbar-tools" flex>
+            <h1>KiTimer</h1>
+        </div>
+        <p>[[date]] [[time]] </p>
+
+    </md-toolbar>
     {% block main %}{% endblock %}
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
@@ -23,7 +30,14 @@
             $httpProvider.defaults.xsrfCookieName = 'csrftoken';
             $httpProvider.defaults.xsrfHeaderName = 'X-CSRFToken';
         });
-
+        app.controller('BaseController', function($scope, $interval) {
+            var updateTime = function() {
+                now = new Date();
+                $scope.date = now.toLocaleDateString();
+                $scope.time = now.toLocaleTimeString();
+            };
+            $interval(updateTime, 500);
+        });
         {% block controller %}{% endblock %}
     </script>
 </body>
