--- a/src/app/webfront/templates/index.html
+++ b/src/app/webfront/templates/index.html
@@ -14,6 +14,7 @@
 {% block controller %} //<script>
     var users = {{ users|safe }};
     var projects = {{ projects|safe }};
+    var day_logs = {{ day_logs|safe }};
 
 
     app.controller('IndexController', function($scope, $mdDialog, $http) {
