Change internal api to ajax

--- a/src/app/webfront/templates/includes/user_list_item.html
+++ b/src/app/webfront/templates/includes/user_list_item.html
@@ -2,5 +2,5 @@
 <h3>[[user.fields.name]]</h3>
 
 <div flex></div>
-<md-button class="md-raised" ng-click="onClickArrived(user)">Arrived</md-button>
-<md-button class="md-raised" ng-click="onClickLeft(user)">Left</md-button>
+<md-button class="md-raised" ng-click="onClickArrived(user)" ng-if="!getLog(user).arrived_at">Arrived</md-button>
+<md-button class="md-raised" ng-click="onClickLeft(user)" ng-if="!getLog(user).left_at">Left</md-button>
