--- a/src/app/webfront/templates/base.html
+++ b/src/app/webfront/templates/base.html
@@ -2,6 +2,7 @@
 <html ng-app="App">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="43200">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.css">
     <link rel="stylesheet" href="{% static 'styles/main.css' %}">
     <title>{{ title|default:"KiTimer" }}</title>
