--- a/src/app/webfront/templates/index.html
+++ b/src/app/webfront/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block main %}
     {{ uj }}
-    <div ng-controller="IndexController">
+    <div ng-controller="IndexController" layout-margin>
         <md-list>
             <md-list-item layout="row" ng-repeat="user in users">
                 {% include "includes/user_list_item.html" %}
