--- a/src/app/report/templates/report.html
+++ b/src/app/report/templates/report.html
@@ -13,14 +13,27 @@
     </div>
     <p>[[date]] [[time]]&nbsp;</p>
 </md-toolbar>
-<div>
-    <div ng-repeat="log in day_logs">
-        [[log.date]],
-        [[log.user.name]],
-        <span ng-repeat="project in log.project_logs">[[project.project]]</span>,
-        [[log.arrived_at]],
-        [[log.left_at]]
-    </div>
+<div layout-margin>
+    <table>
+        <thead>
+            <tr>
+                <th>日付</th>
+                <th>名前</th>
+                <th>プロジェクト</th>
+                <th>出社</th>
+                <th>退社</th>
+            </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="log in day_logs">
+            <td>[[log.date]]</td>
+            <td>[[log.user.name]]</td>
+            <td><span ng-repeat="project in log.project_logs">[[project.project]], </span></td>
+            <td>[[formatDateTime(log.arrived_at)]]</td>
+            <td>[[formatDateTime(log.left_at)]]</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
@@ -59,6 +72,17 @@
             }, function(data) {
             });
         };
+        $scope.formatDateTime = function(dt) {
+            if (!dt) return "";
+            var t = new Date(dt);
+            var format = 'YYYY-MM-DD hh:mm';
+            format = format.replace(/YYYY/g, t.getFullYear());
+            format = format.replace(/MM/g, ('0' + (t.getMonth() + 1)).slice(-2));
+            format = format.replace(/DD/g, ('0' + t.getDate()).slice(-2));
+            format = format.replace(/hh/g, ('0' + t.getHours()).slice(-2));
+            format = format.replace(/mm/g, ('0' + t.getMinutes()).slice(-2));
+            return format;
+        };
 
         $scope.formatTime = function(dt) {
             if (!dt) return "";
@@ -67,7 +91,7 @@
         };
 
         $interval(updateTime, 500);
-        $interval(loadDayLogs, 500);
+        loadDayLogs();
     });
     {% block controller %}{% endblock %}
 </script>
